create a cookie file
