# src/controllers/auth-google.controller.ts
@@ -1,9 +1,8 @@
-import { Controller, Get, Query, Route } from "tsoa";
+import { Controller, Get, Query, Request, Route } from "tsoa";
 import { AuthGoogleSerice } from "../services/auth-google.service";
 import { sendResponse } from "../utils/sendRespone";
-
-
-
+import { setCookies } from "../utils/cookies";
+import { Response } from "express";
 @Route("/v1/auth")
 export class AuthGoogleController extends Controller {
     private googleAuthService: AuthGoogleSerice;
@@ -21,13 +20,17 @@ export class AuthGoogleController extends Controller {
         return sendResponse({ message: 'Login with Google successfully', data: cognitoOAuthURL });
     }
     @Get('/callback')
-    public async cognitoCallback(@Query() code: string, @Query() state: string) {
+    public async cognitoCallback(@Request() request: Express.Request,@Query() code: string, @Query() state: string) {
         try {
             // Exchange the code for tokens
+            const response = (request as any).res as Response
             const tokens = await this.googleAuthService.handleCallback(code, state);
-            // console.log('AuthController - cognitoCallback() Log : ', tokens);
-            console.log('Authorization code received:', code);
-            console.log('State received:', state);
+            setCookies(response ,'id_token',tokens.id_token);
+            setCookies(response, 'access_token', tokens.access_token);
+            setCookies(response, 'refresh_token', tokens.refresh_token, { maxAge: 30 * 24 * 3600 * 1000 });
+            setCookies(response, 'username', tokens.username!, { maxAge: 30 * 24 * 3600 * 1000 });
+            setCookies(response, 'user_id', tokens.userId!, { maxAge: 30 * 24 * 3600 * 1000 });
+
             return sendResponse({
                 message: 'Authentication successful',
                 data: tokens,
@@ -38,6 +41,19 @@ export class AuthGoogleController extends Controller {
                 message: 'Authentication failed',
                 status: 500,
             });
+        }
+    }
+    @Get("/profile")
+    public async getAccessUserProfile(@Query() accessToken: string) {
+        try {
+            const profile = await this.googleAuthService.getAccessUserProfile(accessToken);
+            return sendResponse({
+                message: "user information",
+                status: 200,
+                data: profile
+            })
+        } catch (error) {
+            throw error;
         }
     }
 }
